# src/docs/swagger.json
@@ -490,6 +490,29 @@
 				"type": "object",
 				"additionalProperties": true
 			},
+			"IEventDocument": {
+				"$ref": "#/components/schemas/mongoose.FlattenMaps_mongoose.Default__v_mongoose.Require_id_DocType___"
+			},
+			"GetEventByIdResponse": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"data": {
+						"$ref": "#/components/schemas/IEventDocument"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
 			"ISendCodeResponse": {
 				"properties": {
 					"success": {
@@ -528,6 +551,57 @@
 				},
 				"required": [
 					"email",
+					"role"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"IUserDocument": {
+				"$ref": "#/components/schemas/mongoose.FlattenMaps_mongoose.Default__v_mongoose.Require_id_DocType___"
+			},
+			"IVerifyCodeResponse": {
+				"properties": {
+					"success": {
+						"type": "boolean",
+						"enum": [
+							true
+						],
+						"nullable": false
+					},
+					"data": {
+						"$ref": "#/components/schemas/IUserDocument"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"IVerifyEmailCodeDTO": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"code": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string",
+						"enum": [
+							"guest",
+							"host"
+						]
+					}
+				},
+				"required": [
+					"email",
+					"code",
 					"role"
 				],
 				"type": "object",
@@ -575,54 +649,6 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"IVerifyCodeResponse": {
-				"properties": {
-					"success": {
-						"type": "boolean",
-						"enum": [
-							true
-						],
-						"nullable": false
-					},
-					"data": {
-						"$ref": "#/components/schemas/IUserDTO"
-					},
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"success",
-					"message",
-					"data"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
-			"IVerifyEmailCodeDTO": {
-				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"code": {
-						"type": "string"
-					},
-					"role": {
-						"type": "string",
-						"enum": [
-							"guest",
-							"host"
-						]
-					}
-				},
-				"required": [
-					"email",
-					"code",
-					"role"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
 			"IsAuthenticatedResponse": {
 				"properties": {
 					"success": {
@@ -637,8 +663,7 @@
 				},
 				"required": [
 					"success",
-					"message",
-					"data"
+					"message"
 				],
 				"type": "object",
 				"additionalProperties": true
@@ -1085,6 +1110,32 @@
 				"parameters": []
 			}
 		},
+		"/api/hostels/mine": {
+			"get": {
+				"operationId": "GetMyHostel",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IHostelByIdResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Hostels"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			}
+		},
 		"/api/hostels/{id}": {
 			"get": {
 				"operationId": "GetHostel",
@@ -1179,6 +1230,32 @@
 						}
 					}
 				]
+			}
+		},
+		"/api/guests/me": {
+			"get": {
+				"operationId": "GetMyProfile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IGuestByIdResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Guests"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/guests/{guestId}": {
@@ -1296,6 +1373,41 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/BackendResponse_null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Events"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "eventId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/events/{eventId}": {
+			"get": {
+				"operationId": "GetEventDetails",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetEventByIdResponse"
 								}
 							}
 						}
@@ -1568,7 +1680,11 @@
 				"tags": [
 					"Authentication"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": []
 			}
 		}
